# ai-agentic-chatbot

./: .dockerignore  .env.example  .gitignore  README.md  config.example.yaml  config.yaml  pyproject.toml  test_config.py  test_factory.py
examples/: datasource_usage.py  factory_usage.py
src/ai_agentic_chatbot/: config.py  logging_config.py  main.py  server.py  settings.py  types.py
src/ai_agentic_chatbot/agent/: graph.py  intent_agent.py  registry.py  router.py  schema.py  state.py
src/ai_agentic_chatbot/agent/nodes/: visualizer.py
src/ai_agentic_chatbot/agent/subgraphs/: __init__.py
src/ai_agentic_chatbot/application/: ingest_vector_schema.py  transform_schema_to_text.py
src/ai_agentic_chatbot/controller/: chat.py
src/ai_agentic_chatbot/infrastructure/: db_config.py  db_depency.py  db_session.py  llm.py
src/ai_agentic_chatbot/infrastructure/datasource/: __init__.py  datasource_config.py  datasource_init.py  datasource_settings.py  datasource_types.py  factory.py
src/ai_agentic_chatbot/infrastructure/embedding/: embedding_connection.py
src/ai_agentic_chatbot/prompts/: custom_prompts.md  router_prompts.md  schema_to_text_prompts.md  user_schema_to_text_prompt.md
src/ai_agentic_chatbot/schema_extractor/: SaveSchemaJson.py  SchemaExtractionConfig.py  SchemaExtractor.py  SchemaModels.py  schema_loader.py  table_schema_documentation.py  transform_schema_to_text.py  vector_schema_builder.py
src/ai_agentic_chatbot/services/: orchestration.py
src/ai_agentic_chatbot/utils/: prompt_loader.py  utils.py
tests/: test_db_connection.py
(+17 files in other folders)
